Fix contrast+semantics for past/future event links (#7079)

--- a/indico/web/client/styles/modules/_category.scss
+++ b/indico/web/client/styles/modules/_category.scss
@@ -474,6 +474,10 @@ ul.category-resource-qtip {
       vertical-align: 20%;
     }
   }
+
+  .toggle-hidden-events {
+    @extend %link-button;
+  }
 }
 
 .category-overview {
